[package]
name = "reframe"
version = "0.1.0"
edition.workspace = true
readme = "README.md"
repository.workspace = true
description = "Reframe native extension for Deno"

[lib]
path = "lib.rs"

[dependencies]
analyze = { path = "../../reframe/crates/analyze" }
deno_ast.workspace = true
deno_core.workspace = true
deno_error.workspace = true
serde_json.workspace = true
tokio.workspace = true
